[package]
name = "melete"
version = "0.1.0"
edition = "2021"
description = "GARP RAI spaced repetition CLI — Rust port of rai.py"

[[bin]]
name = "melete"
path = "src/main.rs"

[dependencies]
fsrs = "5.2.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
anyhow = "1"
regex = "1"
