[package]
name = "melete"
version = "0.1.1"
edition = "2021"
description = "FSRS-powered spaced repetition CLI for exam preparation"
license = "MIT"
repository = "https://github.com/terry-li-hm/melete"
homepage = "https://github.com/terry-li-hm/melete"
keywords = ["spaced-repetition", "fsrs", "exam", "cli", "flashcards"]
categories = ["command-line-utilities"]

[[bin]]
name = "melete"
path = "src/main.rs"

[dependencies]
fsrs = "5.2.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
anyhow = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"
